package com.example.carrentaldemo.model;

import com.example.carrentaldemo.model.ddd.AggregateRoot;

public class Booking implements AggregateRoot {
}
