package com.example.carrentaldemo.domain;

import com.example.carrentaldemo.domain.ddd.domain.base.AggregateRoot;

public class Driver implements AggregateRoot {

    @Override
    public String retrieveIdentifier() {
        return null;
    }
}
