package com.example.carrentaldemo.model;

import com.example.carrentaldemo.model.ddd.Entity;

public class Vehicle implements Entity {
}
